# The `dev-dependencies` section sets up tools for building `jj`
# documentation. `poetry` will install these in a virtual environment.
# The other sections are unused.
[tool.poetry]
name = "jj-docs"
version = "0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# These can be updated with `poetry add`.
mkdocs = "^1.5.2"
mkdocs-material = "^9.5"
# (Py)Markdown extensions
mdx-truly-sane-lists = "^1.3"
mdx-breakless-lists = "^1.0.1"
# Allows setting up redirects when renaming docs files
mkdocs-redirects = "^1.2.1"
# Versioning of documentation
mike = "^2.0.0"
mkdocs-include-markdown-plugin = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
