# The `dev-dependencies` section sets up tools for building `jj`
# documentation. `poetry` will install these in a virtual environment.
[tool.poetry]
name = "jj-docs"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# These can be updated with `poetry add`.
mkdocs = ">=1.6,<1.7"
mkdocs-material = ">=9.5.24,<9.6"
# Versioning of documentation
mike = ">=2.1.1,<3"
# (Py)Markdown extensions
mdx-truly-sane-lists = "^1.3"
mdx-breakless-lists = "^1.0.1"
# Allows setting up redirects when renaming docs files
mkdocs-redirects = "^1.2.1"
# Used for the CLI reference
mkdocs-include-markdown-plugin = "^6.0.4"
nodeenv = "^1.8.0"
