# The `dev-dependencies` section sets up tools for building `jj`
# documentation. `uv` will install these in a virtual environment.

[project]
name = "jj-docs"
description = "Sets up MkDocs and related Python tools"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = []

[tool.uv]
package = false
# These can be updated with `uv add --dev`.
dev-dependencies = [
    "mkdocs<1.7,>=1.6",
    # Pin mkdocs-material to the exact version b/c it sometimes breaks thing
    "mkdocs-material==9.5.39",
    # Versioning of documentation
    "mike<3,>=2.1.3",
    # (Py)Markdown extensions
    "mdx-truly-sane-lists<2.0,>=1.3",
    "mdx-breakless-lists<2.0.0,>=1.0.1",
    # Allows setting up redirects when renaming docs files
    "mkdocs-redirects<2.0.0,>=1.2.1",
    # Used for the CLI reference
    "mkdocs-include-markdown-plugin<7.0.0,>=6.0.4",
]
