[package]
name = "jj-lib"
version = "0.8.0"
authors = ["Martin von Zweigbergk <martinvonz@google.com>"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0"
description = "Library for Jujutsu (an experimental VCS)"
homepage = "https://github.com/martinvonz/jj"
repository = "https://github.com/martinvonz/jj"
documentation = "https://docs.rs/jj-lib"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "diff_bench"
harness = false

[build-dependencies]
version_check.workspace = true

[dependencies]
backoff.workspace = true
blake2.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
config.workspace = true
digest.workspace = true
git2.workspace = true
hex.workspace = true
itertools.workspace = true
maplit.workspace = true
once_cell.workspace = true
pest.workspace = true
pest_derive.workspace = true
prost.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
regex.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strsim.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true
watchman_client = { workspace = true, optional = true }
whoami.workspace = true
zstd.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[dev-dependencies]
assert_matches.workspace = true
criterion.workspace = true
esl01-renderdag.workspace = true
insta.workspace = true
num_cpus.workspace = true
test-case.workspace = true
testutils.workspace = true

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]
watchman = ["dep:tokio", "dep:watchman_client"]
