[package]
name = "protos"
version = "0.1.0"
authors = ["Martin von Zweigbergk <martinvonz@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
protobuf = { version = "2.12", features = ["with-bytes"] }
protobuf-codegen-pure = "2.12"
