[package]
name = "testutils"
version = "0.8.0"
authors = ["Martin von Zweigbergk <martinvonz@google.com>"]
edition = "2021"
rust-version = "1.61"
license = "Apache-2.0"
description = "Integration test utils for the jj-lib crate"
homepage = "https://github.com/martinvonz/jj"
repository = "https://github.com/martinvonz/jj"
documentation = "https://docs.rs/jj-lib"
readme = "../..//README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config.workspace = true
git2.workspace = true
itertools.workspace = true
jj-lib.workspace = true
rand.workspace = true
tempfile.workspace = true
